// File:        msg_ss.proto
// Description: ---
// Notes:       ---
// Author:      leoxiang <leoxiang727@qq.com>
// Revision:    2015-06-09 by leoxiang

import "conf_deploy.proto";
import "msg_base.proto";
package msg;

////////////////////////////////////////////////////////////
// server to server messages
message GetDeployConfigReq {
    optional conf.ENServerType  server_type = 1;
    optional uint32             server_id = 2;
}

message GetDeployConfigRsp {
    optional bool result = 1;
    optional conf.Server config = 2;
}

message GetGameConfigReq {
    optional conf.ENServerType  server_type = 1;
}

message GetGameConfigRsp {
    optional bool result = 1;
}

message ReisterToProxyReq {
    optional conf.ENServerType  server_type = 1;
    optional uint32             server_id = 2;
}

message ReisterToProxyRsp {
    optional bool result = 1;
}

message GetAllDeployConfigReq {

}

message GetAllDeployConfigRsp {
    repeated conf.Server all_config = 1;
}

////////////////////////////////////////////////////////////
// server to server message
message SS
{
    optional uint32                 msg_id = 1;
    optional ProxyHead              proxy_head = 2;
    optional GetDeployConfigReq     get_deploy_config_req = 10;
    optional GetDeployConfigRsp     get_deploy_config_rsp = 11;
    optional GetGameConfigReq       get_game_config_req = 12;
    optional GetGameConfigRsp       get_game_config_rsp = 13;
    optional ReisterToProxyReq      register_to_proxy_req = 14;
    optional ReisterToProxyRsp      register_to_proxy_rsp = 15;
    optional GetAllDeployConfigReq  get_all_deploy_config_req = 16;
    optional GetAllDeployConfigRsp  get_all_deploy_config_rsp = 17;
}


// vim:ts=4:sw=4:et:ft=proto:
